Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

CONFIGS
	Added php5-json package ( Debian Jessie )
	Moved: Local DNS resolver parameters from the imscp.conf file to the  bind.data configuration file

ENGINE
	Added: Checks for a2enconf/a2disconf command availability
	Added: -h ( help ) short option  ( iMSCP::Getopt module )
	Moved: Local DNS resolver question into bind9 installer
	Removed: imscp-local-dns-resolver script (  The bind9 initscript invokes resolvconf itself )

INSTALLER
	Removed: 'resolver' configuration item ( local DNS resolver question is part of 'named' configuration item )
	Fixed: php5enmod command throws an error when a PHP module is missing ( PHP5.4 )

TICKETS
	Fixed #1205: Good practices - Use "-h" as abbrev for "--help" (instead of "-?")
	Fixed #1206: Good practices - Install resolvconf only when bind9 is also installed

------------------------------------------------------------------------------------------------------------------------
1.2.0
------------------------------------------------------------------------------------------------------------------------

2014-12-30: Laurent Declercq
	RELEASE i-MSCP 1.2.0

DAEMON
	Fixed: The server traffic must be collected before any stopping attempt ( imscp_network )

CONFIGS
	Fixed: The time at which the backup script must be run is no configurable
	Renamed: /etc/imscp/hooks.d directory to /etc/imscp/listeners.d
	Removed: Roundcube configuration directory ( now shipped with the roundcube package )

DISTROS
	Removed: Support for obsolete Ubuntu versions ( Quantal Quetzal, Raring Ringtail, Saucy Salamander )

DOCS
	Updated: INSTALL files

ENGINE
	Added: FETCH_MODE option in iMSCP::Database::mysql
	Added: iMSCP::ProgramFinder module which allow to test whether programs are available on the executable search path
	Added: iMSCP::Service module for service management ( start, stop, restart, reload, status )