@@ -44,7 +44,12 @@
             <package>libgamin0</package>
             <package>maildrop</package>
         </courier>
-        <dovecot>
+        <dovecot
+                pinning_package="dovecot-core dovecot-imapd dovecot-pop3d dovecot-managesieved dovecot-sieve"
+                repository="deb http://http.debian.net/debian wheezy-backports main"
+                pinning_pin="release a=wheezy-backports"
+                pinning_pin_priority="1001"
+                >
             <package>dovecot-core</package>
             <package>dovecot-imapd</package>
             <package>dovecot-pop3d</package>
@@ -79,6 +84,8 @@
                 pinning_package="mysql-client-5.5 mysql-server-5.5 mysql-common libmysqlclient16 libmysqlclient18"
                 pinning_pin="release o=Debian,n=wheezy"
                 pinning_pin_priority="1001"
+                repository_key_srv="keyserver.ubuntu.com"
+                repository_key_id="0xcbcb082a1bb943db"
                 >
             <package>mysql-server-5.5</package>
             <package>mysql-client-5.5</package>
